tests/sema/negative/duplicate_struct_literal_field.nv
struct Point {
    x: int;
    y: int;
}

fn main() : void {
    let p : Point = Point { x: 1, x: 2, y: 3 };
    return;
}
